Changes the API from floats to doubles.